--- a/HotelBooking.IntegrationTests/HotelBooking.IntegrationTests.csproj
+++ b/HotelBooking.IntegrationTests/HotelBooking.IntegrationTests.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="moq" Version="4.20.72" />
     <PackageReference Include="Reqnroll" Version="3.0.2" />
     <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="3.0.2" />
     <PackageReference Include="Reqnroll.xUnit" Version="3.0.2" />
